# geo-gim-model

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  config.yml  docker-compose.yml  mainfile.py  pyproject.toml  requirements.txt  setup.py  training.py  training_segmentalist.py
.github/workflows/: python-publish.yml
TRAIN/masks/: Kibera_30cm_ground_truth.tif.aux.xml  Medellin_ground_truth.tif.aux.xml
TRAIN/rasters/: Kibera_30cm.tif.aux.xml  Medellin_40cm.tif.aux.xml
disabled-github/workflows/: python-publish.yml
docs/html/: .buildinfo  corrections.html  datasets.html  genindex.html  getting_started.html  gim_cv.html  gim_cv.interfaces.html  gim_cv.interfaces.jp2.html  gim_cv.interfaces.shp.html  gim_cv.interfaces.tif.html  gim_cv.scrapers.html  gim_cv.scrapers.vl_orthos.html  gim_cv.scrapers.vl_orthos.spiders.html  index.html  inference.html  install.html  interfaces.html  misc.html  models.html  modules.html  objects.inv  polygonisation.html  preprocessing.html  py-modindex.html  search.html  searchindex.js  training.html
docs/html/_sources/: corrections.rst.txt  interfaces.rst.txt  (+1 more)
gim_cv/: __init__.py  callbacks.py  config.py  dask_tools.py  datasets.py  exceptions.py  inference.py  losses.py  metrics.py  orchestration.py  preprocessing.py  training.py  tuners.py  utils.py
gim_cv/interfaces/: __init__.py  base.py
gim_cv/models/: blocks.py  deepresunet.py  segmentalist.py
scripts/: run_inference_segmentalist.py  training_segmentalist.py
scripts/data_prep/: README.md  clip_inference.py  clip_training.py  thresholding_inference.py
(+19 files in other folders)
