[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gim-cv"

version = "0.0.4"
description = "GIM Model"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'tensorflow',
    'numpy',
    'scipy',
    'matplotlib',
    'scikit-learn',
    'pandas',
    'h5py',
    'einops',
    'scipy',
    'keras-tuner',
    'dask',
    'keras',
    'geopandas',
    'numpy',
    'albumentations',
    'tqdm',
    'scikit-image',
    'aiohttp',
    'pyyaml',
]

[tool.setuptools.dynamic]
version = {attr = "gim_cv.__version__"}

[tool.setuptools.packages.find]
where = ["./"]

[tool.distutils.bdist_wheel]
universal = true